--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cycler==0.10.0
 DateTime==4.2
 decorator==4.1.2
 entrypoints==0.2.3
+facebook-sdk==2.0.0
 html5lib==1.0.1
 idna==2.6
 ipykernel==4.7.0
