--- a/requirements.txt
+++ b/requirements.txt
@@ -27,11 +27,13 @@ matplotlib==2.1.1
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
+nltk==3.2.5
 notebook==5.2.2
 numpy==1.13.3
 pandas==0.22.0
 pandocfilters==1.4.2
 parso==0.1.1
+patsy==0.5.0
 pexpect==4.3.1
 pickleshare==0.7.4
 pluggy==0.6.0
@@ -47,10 +49,13 @@ pytz==2017.3
 pyzmq==16.0.3
 qtconsole==4.3.1
 requests==2.18.4
+scikit-learn==0.19.1
 scipy==1.0.0
 seaborn==0.8.1
 simplegeneric==0.8.1
 six==1.11.0
+sklearn==0.0
+statsmodels==0.8.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==4.5.2
